Added missing PPC64LE debug repos

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -333,6 +333,7 @@
       remote_url: https://repo.almalinux.org/almalinux/8/devel/Source/
       production: true
       debug: false
+      remote_sync_policy: on_demand
       repository_sync_policy: additive
     - arch: src
       name: almalinux-8-extras
@@ -478,34 +479,50 @@
       debug: true
       remote_sync_policy: on_demand
       repository_sync_policy: additive
-    - arch: aarch64
+    - name: almalinux-8-baseos-debuginfo
+      arch: ppc64le
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8.5-beta/BaseOS/debug/ppc64le/
+      production: true
+      debug: true
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - name: almalinux-8-appstream-debuginfo
+      arch: ppc64le
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8.5-beta/AppStream/debug/ppc64le/
+      production: true
+      debug: true
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - name: almalinux-8-powertools-debuginfo
+      arch: ppc64le
+      type: rpm
+      remote_url: https://repo.almalinux.org/almalinux/8.5-beta/PowerTools/debug/ppc64le/
+      production: true
+      debug: true
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+    - arch: ppc64le
       name: almalinux-8-highavailability-debuginfo
       type: rpm
-      remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/debug/aarch64/
+      remote_url: https://repo.almalinux.org/almalinux/8.5-beta/HighAvailability/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
       repository_sync_policy: additive
-    - arch: aarch64
+    - arch: ppc64le
       name: almalinux-8-resilientstorage-debuginfo
       type: rpm
-      remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/debug/aarch64/
+      remote_url: https://repo.almalinux.org/almalinux/8.5-beta/ResilientStorage/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
       repository_sync_policy: additive
-    - arch: aarch64
-      name: almalinux-8-devel-debuginfo
-      type: rpm
-      remote_url: https://repo.almalinux.org/almalinux/8/devel/debug/aarch64/
-      production: true
-      debug: true
-      remote_sync_policy: on_demand
-      repository_sync_policy: additive
-    - arch: aarch64
+    - arch: ppc64le
       name: almalinux-8-extras-debuginfo
       type: rpm
-      remote_url: https://repo.almalinux.org/almalinux/8/extras/debug/aarch64/
+      remote_url: https://repo.almalinux.org/almalinux/8.5-beta/extras/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
