--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -26,8 +26,11 @@ server {
     }
 
     location /api/v1/ {
-	proxy_read_timeout 900s;
-        proxy_pass http://backend;
+        proxy_read_timeout 900s;
+        proxy_set_header Host $http_host;
+        proxy_set_header Connection $http_connection;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_pass $scheme://backend;
     }
 
     location /pulp/ {
