--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -41,12 +41,12 @@
       releasever: '8'
       use_bootstrap_container: false
       macros:
-        "%pe_signing_cert": 'Cloud Linux Software, Inc'
-        "%pe_signing_token": 'profil standardowy'
-        "%_pesign": /usr/local/bin/pesign
-        "%_pesign_client": /usr/local/bin/pesign-client
-        "%with_modsign": 1
-        "%modsign_os": almalinux8
+        "%pe_signing_cert": "'Cloud Linux Software, Inc'"
+        "%pe_signing_token": "profil standardowy"
+        "%_pesign": "/usr/local/bin/pesign"
+        "%_pesign_client": "/usr/local/bin/pesign-client"
+        "%with_modsign": "1"
+        "%modsign_os": "almalinux8"
     mock_dist: el8
     timeout: 43200
     yum:
@@ -575,12 +575,12 @@
       releasever: '9'
       use_bootstrap_container: false
       macros:
-        "%pe_signing_cert": 'Cloud Linux Software, Inc'
-        "%pe_signing_token": 'profil standardowy'
-        "%_pesign": /usr/local/bin/pesign
-        "%_pesign_client": /usr/local/bin/pesign-client
-        "%with_modsign": 1
-        "%modsign_os": almalinux9
+        "%pe_signing_cert": "Cloud Linux Software, Inc"
+        "%pe_signing_token": "profil standardowy"
+        "%_pesign": "/usr/local/bin/pesign"
+        "%_pesign_client": "/usr/local/bin/pesign-client"
+        "%with_modsign": "1"
+        "%modsign_os": "almalinux9"
     mock_dist: el9
     timeout: 43200
     yum:
