--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -42,7 +42,7 @@
       use_bootstrap_container: false
       macros:
         "%pe_signing_cert": "'Cloud Linux Software, Inc'"
-        "%pe_signing_token": "profil standardowy"
+        "%pe_signing_token": "'profil standardowy'"
         "%_pesign": "/usr/local/bin/pesign"
         "%_pesign_client": "/usr/local/bin/pesign-client"
         "%with_modsign": "1"
