ALBS-144: Added logic in releaser for correct placing in pulp repos
- Added table `reference_platforms`
- Changed script for loading reference platforms
- Added retry for multilib
- Fixed schemas for reference platforms
- Fixed create/modify reference platforms
- Fixed schema for sign key create

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -3,6 +3,7 @@
   distr_type: rhel
   distr_version: '8'
   test_dist_name: almalinux
+  reference_platform: 'CentOSStream8'
   modularity:
     modified_packages_url: 'https://git.almalinux.org/almalinux/modified_packages/raw/branch/main/modified_packages.yml'
     packages_git: 'https://git.almalinux.org/rpms/'
@@ -539,6 +540,7 @@
   distr_type: rhel
   distr_version: '9'
   test_dist_name: almalinux
+  reference_platform: 'CentOSStream9'
   modularity:
     modified_packages_url: 'https://git.almalinux.org/almalinux/modified_packages/raw/branch/main/modified_packages.yml'
     packages_git: 'https://git.almalinux.org/rpms/'
