--- a/reference_data/centos_stream.yml
+++ b/reference_data/centos_stream.yml
@@ -1,7 +1,16 @@
 ---
-  name: CentOSStream
+- name: CentOSStream8
   distr_type: rhel
   distr_version: '8'
+  type: rpm
+  arch_list:
+    - x86_64
+    - aarch64
+    - ppc64le
+
+- name: CentOSStream9
+  distr_type: rhel
+  distr_version: '9'
   type: rpm
   arch_list:
     - x86_64
