--- a/reference_data/centos_stream.yml
+++ b/reference_data/centos_stream.yml
@@ -2,6 +2,9 @@
 - name: CentOSStream8
   distr_type: rhel
   distr_version: '8'
+  test_dist_name: CentOSStream8
+  data: {}
+  is_reference: true
   type: rpm
   arch_list:
     - x86_64
@@ -11,6 +14,9 @@
 - name: CentOSStream9
   distr_type: rhel
   distr_version: '9'
+  test_dist_name: CentOSStream9
+  data: {}
+  is_reference: true
   type: rpm
   arch_list:
     - x86_64
