Add swagger docs to dev nginx config

--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -33,6 +33,14 @@ server {
         proxy_pass $scheme://backend;
     }
 
+    location /docs {
+        proxy_pass $scheme://backend;
+    }
+
+    location /openapi.json {
+        proxy_pass $scheme://backend;
+    }
+
     location /pulp/ {
         proxy_pass http://pulp;
     }
