Added export_path field into repository model, added feature to update repository data by platform

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -63,6 +63,7 @@
       name: almalinux-8-baseos
       type: rpm
       remote_url: https://repo.almalinux.org/vault/8/BaseOS/i686/os/
+      export_path: vault/8/BaseOS/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -71,6 +72,7 @@
       name: almalinux-8-appstream
       type: rpm
       remote_url: https://repo.almalinux.org/vault/8/AppStream/i686/os/
+      export_path: vault/8/AppStream/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -79,6 +81,7 @@
       name: almalinux-8-powertools
       type: rpm
       remote_url: https://repo.almalinux.org/vault/8/PowerTools/i686/os/
+      export_path: vault/8/PowerTools/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -87,6 +90,7 @@
       name: almalinux-8-highavailability
       type: rpm
       remote_url: https://repo.almalinux.org/vault/8/HighAvailability/i686/os/
+      export_path: vault/8/HighAvailability/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -95,6 +99,7 @@
       name: almalinux-8-resilientstorage
       type: rpm
       remote_url: https://repo.almalinux.org/vault/8/ResilientStorage/i686/os/
+      export_path: vault/8/ResilientStorage/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -103,6 +108,7 @@
       name: almalinux-8-devel
       type: rpm
       remote_url: https://repo.almalinux.org/vault/8/devel/i686/os/
+      export_path: vault/8/devel/i686/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -111,6 +117,7 @@
       name: almalinux-8-extras
       type: rpm
       remote_url: https://repo.almalinux.org/vault/8/extras/i686/os/
+      export_path: vault/8/extras/i686/os/
       production: true
       debug: false
       repository_sync_policy: additive
@@ -119,6 +126,7 @@
       name: almalinux-8-baseos
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/x86_64/os/
+      export_path: almalinux/8/BaseOS/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -127,6 +135,7 @@
       name: almalinux-8-appstream
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/AppStream/x86_64/os/
+      export_path: almalinux/8/AppStream/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -135,6 +144,7 @@
       name: almalinux-8-powertools
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/x86_64/os/
+      export_path: almalinux/8/PowerTools/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -143,6 +153,7 @@
       name: almalinux-8-highavailability
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/x86_64/os/
+      export_path: almalinux/8/HighAvailability/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -151,6 +162,7 @@
       name: almalinux-8-resilientstorage
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/x86_64/os/
+      export_path: almalinux/8/ResilientStorage/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -159,6 +171,7 @@
       name: almalinux-8-devel
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/devel/x86_64/os/
+      export_path: almalinux/8/devel/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -167,6 +180,7 @@
       name: almalinux-8-extras
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/extras/x86_64/os/
+      export_path: almalinux/8/extras/x86_64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -175,6 +189,7 @@
       name: almalinux-8-baseos
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/aarch64/os/
+      export_path: almalinux/8/BaseOS/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -183,6 +198,7 @@
       name: almalinux-8-appstream
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/AppStream/aarch64/os/
+      export_path: almalinux/8/AppStream/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -191,6 +207,7 @@
       name: almalinux-8-powertools
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/aarch64/os/
+      export_path: almalinux/8/PowerTools/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -199,6 +216,7 @@
       name: almalinux-8-highavailability
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/aarch64/os/
+      export_path: almalinux/8/HighAvailability/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -207,6 +225,7 @@
       name: almalinux-8-resilientstorage
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/aarch64/os/
+      export_path: almalinux/8/ResilientStorage/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -215,6 +234,7 @@
       name: almalinux-8-devel
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/devel/aarch64/os/
+      export_path: almalinux/8/devel/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -223,6 +243,7 @@
       name: almalinux-8-extras
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/extras/aarch64/os/
+      export_path: almalinux/8/extras/aarch64/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -231,6 +252,7 @@
       name: almalinux-8-baseos
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/BaseOS/ppc64le/os/
+      export_path: almalinux/8.5-beta/BaseOS/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -239,6 +261,7 @@
       name: almalinux-8-appstream
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/AppStream/ppc64le/os/
+      export_path: almalinux/8.5-beta/AppStream/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -247,6 +270,7 @@
       name: almalinux-8-powertools
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/PowerTools/ppc64le/os/
+      export_path: almalinux/8.5-beta/PowerTools/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -255,6 +279,7 @@
       name: almalinux-8-highavailability
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/HighAvailability/ppc64le/os/
+      export_path: almalinux/8.5-beta/HighAvailability/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -263,6 +288,7 @@
       name: almalinux-8-resilientstorage
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/ResilientStorage/ppc64le/os/
+      export_path: almalinux/8.5-beta/ResilientStorage/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -271,6 +297,7 @@
       name: almalinux-8-extras
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/extras/ppc64le/os/
+      export_path: almalinux/8.5-beta/extras/ppc64le/os/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -296,6 +323,7 @@
       arch: src
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/Source/
+      export_path: almalinux/8/BaseOS/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -304,6 +332,7 @@
       arch: src
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/AppStream/Source/
+      export_path: almalinux/8/AppStream/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -312,6 +341,7 @@
       arch: src
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/Source/
+      export_path: almalinux/8/PowerTools/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -320,6 +350,7 @@
       name: almalinux-8-highavailability
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/Source/
+      export_path: almalinux/8/HighAvailability/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -328,6 +359,7 @@
       name: almalinux-8-highavailability
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/Source/
+      export_path: almalinux/8/HighAvailability/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -336,6 +368,7 @@
       name: almalinux-8-resilientstorage
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/Source/
+      export_path: almalinux/8/ResilientStorage/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -344,6 +377,7 @@
       name: almalinux-8-devel
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/devel/Source/
+      export_path: almalinux/8/devel/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -352,6 +386,7 @@
       name: almalinux-8-extras
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/extras/Source/
+      export_path: almalinux/8/extras/Source/
       production: true
       debug: false
       remote_sync_policy: on_demand
@@ -360,6 +395,7 @@
       arch: x86_64
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/debug/x86_64/
+      export_path: almalinux/8/BaseOS/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -368,6 +404,7 @@
       arch: x86_64
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/AppStream/debug/x86_64/
+      export_path: almalinux/8/AppStream/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -376,6 +413,7 @@
       arch: x86_64
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/debug/x86_64/
+      export_path: almalinux/8/PowerTools/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -384,6 +422,7 @@
       name: almalinux-8-highavailability-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/debug/x86_64/
+      export_path: almalinux/8/HighAvailability/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -392,6 +431,7 @@
       name: almalinux-8-resilientstorage-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/debug/x86_64/
+      export_path: almalinux/8/ResilientStorage/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -400,6 +440,7 @@
       name: almalinux-8-devel-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/devel/debug/x86_64/
+      export_path: almalinux/8/devel/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -408,6 +449,7 @@
       name: almalinux-8-highavailability-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/debug/x86_64/
+      export_path: almalinux/8/HighAvailability/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -416,6 +458,7 @@
       name: almalinux-8-resilientstorage-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/debug/x86_64/
+      export_path: almalinux/8/ResilientStorage/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -424,6 +467,7 @@
       name: almalinux-8-devel-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/devel/debug/x86_64/
+      export_path: almalinux/8/devel/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -432,6 +476,7 @@
       name: almalinux-8-extras-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/extras/debug/x86_64/
+      export_path: almalinux/8/extras/debug/x86_64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -440,6 +485,7 @@
       arch: aarch64
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/BaseOS/debug/aarch64/
+      export_path: almalinux/8/BaseOS/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -448,6 +494,7 @@
       arch: aarch64
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/AppStream/debug/aarch64/
+      export_path: almalinux/8/AppStream/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -456,6 +503,7 @@
       arch: aarch64
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/PowerTools/debug/aarch64/
+      export_path: almalinux/8/PowerTools/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -464,6 +512,7 @@
       name: almalinux-8-highavailability-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/HighAvailability/debug/aarch64/
+      export_path: almalinux/8/HighAvailability/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -472,6 +521,7 @@
       name: almalinux-8-resilientstorage-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/ResilientStorage/debug/aarch64/
+      export_path: almalinux/8/ResilientStorage/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -480,6 +530,7 @@
       name: almalinux-8-devel-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/devel/debug/aarch64/
+      export_path: almalinux/8/devel/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -488,6 +539,7 @@
       name: almalinux-8-extras-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8/extras/debug/aarch64/
+      export_path: almalinux/8/extras/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -496,6 +548,7 @@
       arch: ppc64le
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/BaseOS/debug/ppc64le/
+      export_path: almalinux/8.5-beta/BaseOS/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -504,6 +557,7 @@
       arch: ppc64le
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/AppStream/debug/ppc64le/
+      export_path: almalinux/8.5-beta/AppStream/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -512,6 +566,7 @@
       arch: ppc64le
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/PowerTools/debug/ppc64le/
+      export_path: almalinux/8.5-beta/PowerTools/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -520,6 +575,7 @@
       name: almalinux-8-highavailability-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/HighAvailability/debug/ppc64le/
+      export_path: almalinux/8.5-beta/HighAvailability/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -528,6 +584,7 @@
       name: almalinux-8-resilientstorage-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/ResilientStorage/debug/ppc64le/
+      export_path: almalinux/8.5-beta/ResilientStorage/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
@@ -536,6 +593,7 @@
       name: almalinux-8-extras-debuginfo
       type: rpm
       remote_url: https://repo.almalinux.org/almalinux/8.5-beta/extras/debug/ppc64le/
+      export_path: almalinux/8.5-beta/extras/debug/ppc64le/
       production: true
       debug: true
       remote_sync_policy: on_demand
